syntax = "proto3";

package video;
option go_package = "proto/video";
message VideoResponse {

}
message CreateVideoRequest {
	string url = 1;
	string user_id = 2;
    string description = 3;
}

message VideoQuality{
    string id = 1;
    string quality = 2;
    string video_id = 3;
    string object_id = 4;
}


message VideoReadyRequest {
	string video_id = 1;
    repeated VideoQuality quality = 2;
}

service VideoService {
	rpc CreateVideo (CreateVideoRequest) returns (VideoResponse) {}
    rpc MakeVideoReady (VideoReadyRequest) returns (VideoResponse) {}
}
